# sterling

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  README.md  WAIVER.sigs  appveyor.yml
benches/: bench.rs
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
src/: config.rs  convert.rs  currency.rs  lib.rs  main.rs
