[package]
name = "sterling"
version = "0.3.0"
description = "Converts a given D&D 5e currency value to the Silver Standard."
authors = ["Zachary Dziura <zcdziura@gmail.com>"]
readme = "README.md"
license = "Unlicense/MIT"
repository = "https://gitlab.com/zcdziura/sterling"
keywords = ["dnd", "coins", "converter", "currency", "5e"]

[dependencies]
clap = "2.31"
lazy_static = "1.0"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

[profile.release]
lto = true
panic = "abort"